<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_footer"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp">

        <include layout="@layout/toolbar_add_event" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/title"
                    style="@style/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/title"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="1"
                    android:textColorHighlight="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/desc"
                    style="@style/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="textCapSentences|textMultiLine" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_shadow_footer"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/date_mask"
        android:textColor="@color/text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <TextView
        android:id="@+id/txtTime"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_shadow_footer"
        android:drawableLeft="@drawable/ic_clock"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/time_mask"
        android:textColor="@color/text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/footer_botom_alert"
        android:gravity="right"
        android:padding="10dp"
        android:text="@string/btn_add"
        android:textColor="@color/text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>